Summary: Fixed bug where Quicklink covered NavBar on Classtracker.
Test Plan: None

Reviewers: linh

Reviewed By: linh

Subscribers: linh

Revert Plan: None

Differential Revision: http://13.57.139.206/D394

--- a/src/components/QuickLinkComponent/QuickLinkComponent.css
+++ b/src/components/QuickLinkComponent/QuickLinkComponent.css
@@ -1,7 +1,7 @@
 .Quick-Link-Container {
     position: absolute;
     top: 60px;
-    left: 15px;
+    left: 64px;
     box-shadow: 1px 0 0 0 #f0eff6;
     height: 100%;
 }
@@ -9,16 +9,17 @@
 .Quick-Link-List {
     list-style-type: none;
     padding-top: 30px;
+    padding-left: 0;
 }
 
 .Quick-Link-List li {
     font-size: 12px;
     color: #8a85a6;
     height: 26px;
-    padding-left: 16px;
     width: 131px;
-    text-align: center;
+    text-align: left;
     line-height: 26px;
+    padding-left: 16px;
 }
 
 .Selected-Quick-Link {
